# code-review-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  langgraph.json  pyproject.toml  review.toml
.github/workflows/: ci.yml
examples/: README.md
examples/github-action/: action.yml  example-workflow.yml
examples/gitlab-ci/: .gitlab-ci.yml
examples/jenkins/: Jenkinsfile
skills/dockerfile/: SKILL.md
skills/github-actions/: SKILL.md
skills/gitlab-ci/: SKILL.md
skills/java/: SKILL.md
skills/javascript/: SKILL.md
skills/jenkins/: SKILL.md
skills/python/: SKILL.md
src/code_review_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  types.py
src/code_review_agent/reporters/: __init__.py  base.py  file.py  github.py  gitlab.py  http.py  registry.py  scm.py  terminal.py
src/code_review_agent/skills/: __init__.py  errors.py  loader.py
src/code_review_agent/utils/: __init__.py  detect.py  diffing.py  node_aggregate.py  node_detect.py  node_ingest.py  node_report.py  node_review.py  nodes.py  prompts.py  state.py
tests/: conftest.py
tests/integration/: test_graph.py  test_graph_multi_language.py
tests/integration/fixtures/: multi_language.diff  python_added.diff
tests/unit/: test_agent_graph.py  test_agent_scaffold.py  test_aggregate.py  test_cli.py  test_config.py  test_detect.py  test_diffing.py  test_docker_contract.py  test_llm.py  test_prompts.py  test_report_node.py  test_reporters.py  test_review_node.py  test_scm_reporters.py  test_skills_loader.py  test_state.py
